--- a/GroupLockApplication/app/src/main/res/layout/activity_main.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,39 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/editText"
+        android:layout_marginTop="141dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter"
+        android:id="@+id/EnterButton"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="@dimen/abc_text_size_title_material"
+        android:onClick="GoToNextActivity" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Password"
+        android:id="@+id/Password"
+        android:textSize="@dimen/abc_text_size_title_material"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/EnterButton"
+        android:layout_alignEnd="@+id/EnterButton" />
+
+
 </RelativeLayout>
