--- a/GroupLockApplication/app/src/main/res/layout/activity_main.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:backgroundTint="@color/colorBackGround"
+    android:id="@+id/backGround">
 
     <EditText
         android:layout_width="wrap_content"
@@ -20,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enter"
+        android:textColor="@color/colorButtonText"
         android:id="@+id/EnterButton"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
@@ -31,6 +34,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Password"
+        android:textColor="@color/colorText"
         android:id="@+id/Password"
         android:textSize="@dimen/abc_text_size_title_material"
         android:layout_alignParentTop="true"
