--- a/GroupLockApplication/app/src/main/res/values/styles.xml
+++ b/GroupLockApplication/app/src/main/res/values/styles.xml
@@ -7,5 +7,6 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <!--- style for button -->
 
 </resources>
