--- a/GroupLockApplication/app/src/main/res/layout/activity_choose_to_do.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_choose_to_do.xml
@@ -5,12 +5,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:backgroundTint="@color/colorBackGround"
     tools:context="com.example.sonya.grouplockapplication.ChooseToDoActivity">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Encode"
+        android:textColor="@color/colorButtonText"
         android:id="@+id/EncodeButton"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
@@ -21,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Decode"
+        android:textColor="@color/colorButtonText"
         android:id="@+id/DecodeButton"
         android:layout_below="@+id/EncodeButton"
         android:layout_centerHorizontal="true"
@@ -31,9 +34,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/Main"
+        android:textColor="@color/colorText"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        />
+        android:layout_toStartOf="@+id/LoadButton"
+        android:layout_toLeftOf="@+id/LoadButton" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Load"
+        android:textColor="@color/colorButtonText"
+        android:id="@+id/LoadButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ASK"
+        android:textColor="@color/colorButtonText"
+        android:id="@+id/AskButton"
+        android:layout_alignBaseline="@+id/Main"
+        android:layout_alignBottom="@+id/Main"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:onClick="AskClick" />
 
 </RelativeLayout>
