--- a/GroupLockApplication/app/src/main/res/layout/activity_choose_to_do.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_choose_to_do.xml
@@ -1,67 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:backgroundTint="@color/colorBackGround"
-    tools:context="com.example.sonya.grouplockapplication.ChooseToDoActivity">
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:orientation="vertical"
+tools:context=".LibraryActivity" >
+
+
+<include layout="@layout/library_toolbar" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Encode"
+        android:text="Encrypt"
         android:textColor="@color/colorButtonText"
         android:id="@+id/EncodeButton"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:textSize="@dimen/abc_text_size_title_material"
-        android:onClick="GoToNextActivityTwo" />
+        android:onClick="ChooseEncrypt"
+        android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Decode"
+        android:text="Decrypt"
         android:textColor="@color/colorButtonText"
         android:id="@+id/DecodeButton"
-        android:layout_below="@+id/EncodeButton"
-        android:layout_centerHorizontal="true"
         android:textSize="@dimen/abc_text_size_title_material"
-        android:onClick="GoToNextActivityTwo" />
-
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/Main"
-        android:textColor="@color/colorText"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/LoadButton"
-        android:layout_toLeftOf="@+id/LoadButton" />
+        android:onClick="ChooseDecrypt"
+        android:layout_gravity="center_vertical"
+        android:layout_below="@+id/EncodeButton"
+        android:layout_alignLeft="@+id/EncodeButton"
+        android:layout_alignStart="@+id/EncodeButton" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Load"
-        android:textColor="@color/colorButtonText"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:shape="ring"
         android:id="@+id/LoadButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ASK"
-        android:textColor="@color/colorButtonText"
-        android:id="@+id/AskButton"
-        android:layout_alignBaseline="@+id/Main"
-        android:layout_alignBottom="@+id/Main"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:onClick="AskClick" />
+        android:background="@drawable/ic_arrow_drop_down_circle_black_48dp"/>
+
 
 </RelativeLayout>
