--- a/GroupLockApplication/app/src/main/res/layout/library_layout.xml
+++ b/GroupLockApplication/app/src/main/res/layout/library_layout.xml
@@ -45,11 +45,25 @@
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:shape="ring"
-        android:id="@+id/button3"
+        android:id="@+id/btnLoadFile"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:background="@drawable/ic_arrow_drop_down_circle_black_48dp"/>
+
+    <Button
+            android:id="@+id/btnNext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/btnLoadFile"
+            android:layout_toLeftOf="@id/btnLoadFile"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:visibility="invisible"
+            android:enabled="false"
+            android:onClick="goToNextStep"
+            android:text="@string/common_next_step"/>
 
 
 </RelativeLayout>
