--- a/GroupLockApplication/app/src/main/res/menu/library_menu.xml
+++ b/GroupLockApplication/app/src/main/res/menu/library_menu.xml
@@ -27,6 +27,18 @@
               android:icon="@drawable/ic_settings_applications_black_24dp"
               android:title="@string/action_settings"
               app:showAsAction="never" />
+
+    <!-- Encrypt -->
+          <item android:id="@+id/action_encrypt"
+                android:title="@string/action_encrypt"
+                android:enabled="false"
+                app:showAsAction="never" />
+
+    <!-- Decrypt -->
+          <item android:id="@+id/action_decrypt"
+                android:title="@string/action_decrypt"
+                android:enabled="false"
+                app:showAsAction="never" />
       </menu>
     </item>
     <item
