--- a/GroupLockApplication/app/src/main/res/layout/activity_choose_to_do.xml
+++ b/GroupLockApplication/app/src/main/res/layout/activity_choose_to_do.xml
@@ -68,7 +68,10 @@ tools:context=".LibraryActivity" >
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/ic_arrow_drop_down_circle_black_48dp"/>
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:background="@drawable/load_button_background"/>
 
 
 </RelativeLayout>
