--- a/GroupLockApplication/app/src/main/res/drawable/library_disabled_entry_background.xml
+++ b/GroupLockApplication/app/src/main/res/drawable/library_disabled_entry_background.xml
@@ -1,5 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="#335373" />
-    <stroke android:width="1dip" android:color="#142f4d"/>
+    <solid android:color="#bcd0e3" />
+    <stroke android:width="1dip" android:color="#a3b6cc"/>
+    <!-- TODO: select colors -->
     <corners android:radius="@dimen/activity_vertical_margin"/>
 </shape>
