Improved Library controls and appearance; other minor fixes

--- a/GroupLockApplication/app/src/main/res/drawable/library_disabled_entry_background.xml
+++ b/GroupLockApplication/app/src/main/res/drawable/library_disabled_entry_background.xml
@@ -2,5 +2,5 @@
     <solid android:color="#bcd0e3" />
     <stroke android:width="1dip" android:color="#a3b6cc"/>
     <!-- TODO: select colors -->
-    <corners android:radius="@dimen/activity_vertical_margin"/>
+    <corners android:radius="2dp"/>
 </shape>
