--- a/GroupLockApplication/app/src/main/res/drawable/library_entry_background.xml
+++ b/GroupLockApplication/app/src/main/res/drawable/library_entry_background.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <solid android:color="#335373" />
     <stroke android:width="1dip" android:color="#142f4d"/>
-    <corners android:radius="@dimen/activity_vertical_margin"/>
+    <corners android:radius="2dp"/>
 </shape>
