--- a/GroupLock iOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLock iOS/GroupLock/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10083"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,11 +17,60 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fk7-jF-owG">
+                                <rect key="frame" x="175" y="73" width="250" height="93.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="agr-ND-UIk"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="ENTER PASSWORD">
+                                        <attributes>
+                                            <color key="NSColor" red="0.99215686274509807" green="0.22745098039215686" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="40" name="HelveticaNeue"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9k8-8d-eQT">
+                                <rect key="frame" x="175.5" y="195" width="250" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="400" id="POM-Xx-MaH"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="aSO-M9-uHC"/>
+                                    <constraint firstAttribute="width" constant="100" id="akK-4G-taY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="akK-4G-taY"/>
+                                    </mask>
+                                </variation>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="0.24313725490196078" green="0.30588235294117649" blue="0.40784313725490196" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Fk7-jF-owG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0Kd-9X-cCF"/>
+                            <constraint firstAttribute="trailing" secondItem="9k8-8d-eQT" secondAttribute="trailing" constant="1" id="0Sy-kx-FKR"/>
+                            <constraint firstItem="9k8-8d-eQT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.7" id="2qk-Gn-0Rp"/>
+                            <constraint firstItem="Fk7-jF-owG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.4" id="9z3-B8-Ema"/>
+                            <constraint firstItem="9k8-8d-eQT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ed4-D2-sHY"/>
+                            <constraint firstItem="9k8-8d-eQT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="tdw-ec-K7k"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="0Sy-kx-FKR"/>
+                                <exclude reference="tdw-ec-K7k"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="245" y="335"/>
         </scene>
     </scenes>
 </document>
