--- a/GroupLock iOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLock iOS/GroupLock/Base.lproj/Main.storyboard
@@ -6,10 +6,10 @@
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Password View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PasswordViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -34,39 +34,32 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9k8-8d-eQT">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9k8-8d-eQT" userLabel="Initial Password Text Field">
                                 <rect key="frame" x="175.5" y="195" width="250" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="400" id="POM-Xx-MaH"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="aSO-M9-uHC"/>
-                                    <constraint firstAttribute="width" constant="100" id="akK-4G-taY"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="akK-4G-taY"/>
-                                    </mask>
-                                </variation>
+                                <connections>
+                                    <action selector="onPasswordTextField:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="Qlw-rO-AAc"/>
+                                </connections>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.24313725490196078" green="0.30588235294117649" blue="0.40784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="Fk7-jF-owG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0Kd-9X-cCF"/>
-                            <constraint firstAttribute="trailing" secondItem="9k8-8d-eQT" secondAttribute="trailing" constant="1" id="0Sy-kx-FKR"/>
                             <constraint firstItem="9k8-8d-eQT" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.7" id="2qk-Gn-0Rp"/>
                             <constraint firstItem="Fk7-jF-owG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.4" id="9z3-B8-Ema"/>
                             <constraint firstItem="9k8-8d-eQT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ed4-D2-sHY"/>
-                            <constraint firstItem="9k8-8d-eQT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="tdw-ec-K7k"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="0Sy-kx-FKR"/>
-                                <exclude reference="tdw-ec-K7k"/>
-                            </mask>
-                        </variation>
                     </view>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
+                    <connections>
+                        <outlet property="enterPasswordLabel" destination="Fk7-jF-owG" id="HaP-BM-lLx"/>
+                        <outlet property="initialPasswordTextField" destination="9k8-8d-eQT" id="EtE-Be-66A"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
