--- a/GroupLock iOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLock iOS/GroupLock/Base.lproj/Main.storyboard
@@ -36,32 +36,15 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="EnterPasswordLabel"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9k8-8d-eQT" userLabel="Initial Password Text Field">
-                                <rect key="frame" x="175" y="255" width="250" height="30"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="81M-sj-372"/>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="400" id="POM-Xx-MaH"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="aSO-M9-uHC"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="PasswordTextField"/>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="textFieldOnChange:" destination="BYZ-38-t0r" eventType="editingChanged" id="ZTl-9w-orJ"/>
-                                </connections>
-                            </textField>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I8c-sf-7NN">
-                                <rect key="frame" x="216" y="308" width="168" height="37"/>
+                                <rect key="frame" x="250" y="308" width="100" height="37"/>
                                 <color key="backgroundColor" red="0.25490196078431371" green="0.70196078431372544" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="168" id="4Ts-vX-s8X"/>
+                                    <constraint firstAttribute="width" constant="100" id="4Ts-vX-s8X"/>
                                     <constraint firstAttribute="height" constant="37" id="Rjp-Ta-qmz"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
-                                <state key="normal" title="I'M NOT A CHEATER">
+                                <state key="normal" title="Proceed">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -72,6 +55,21 @@
                                     <segue destination="YPl-G6-tPp" kind="presentation" id="uX7-UK-MUp"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9k8-8d-eQT" userLabel="Initial Password Text Field">
+                                <rect key="frame" x="175" y="255" width="250" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="81M-sj-372"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="400" id="POM-Xx-MaH"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="250" id="aSO-M9-uHC"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
+                                <connections>
+                                    <action selector="textFieldOnChange:" destination="BYZ-38-t0r" eventType="editingChanged" id="ZTl-9w-orJ"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.18823529410000001" green="0.23921568630000001" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
@@ -126,6 +124,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Fcv-8Y-wFC">
+                        <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="qZR-CY-82Z" kind="relationship" relationship="rootViewController" id="0cX-yT-SSC"/>
                     </connections>
@@ -134,10 +136,10 @@
             </objects>
             <point key="canvasLocation" x="1624" y="-393"/>
         </scene>
-        <!--GroupLock-->
+        <!--Home View Controller-->
         <scene sceneID="e43-H1-Rg5">
             <objects>
-                <viewController id="qZR-CY-82Z" sceneMemberID="viewController">
+                <viewController id="qZR-CY-82Z" userLabel="Home View Controller" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="s0i-cH-rCT"/>
                         <viewControllerLayoutGuide type="bottom" id="HO9-uW-Z1N"/>
